--- a/docs/style.css
+++ b/docs/style.css
@@ -36,13 +36,7 @@ main {
 
 svg {
   fill: #ff79c6;
-}
-
-.Atributions {
-  bottom: 0;
-  position: absolute;
-  display: flex;
-  text-align: center;
+  padding-top: -30px;
 }
 
 .search {
@@ -132,4 +126,14 @@ input {
   font-size: 13px;
   top: 0;
   color: #3951b2;
+}
+
+.Atributions {
+  bottom: 0;
+  position: absolute;
+  display: flex;
+  align-items: center;
+}
+.Atributions a {
+  color: white;
 }
