--- a/docs/style.css
+++ b/docs/style.css
@@ -23,7 +23,7 @@ h2 {
 }
 
 #dnaImage {
-  background-image: url("../theme/DNA.png");
+  background-image: url("../theme/dna.png");
   width: 40vw;
   height: 100vh;
   background-repeat: no-repeat;
