--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ h2 {
 }
 
 #dnaImage {
-  background-image: url("../theme/dna.png");
+  background-image: url("/dna.png");
   width: 40vw;
   height: 100vh;
   background-repeat: no-repeat;
@@ -40,8 +40,19 @@ svg {
 }
 
 .search {
+  position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+
+.search-icon {
+  position: absolute;
+  right: 20px;
+  cursor: pointer;
+  font-size: 2px;
+  /* smaller size */
 }
 
 /* ==> Add style animation for input:*/
@@ -52,6 +63,7 @@ svg {
   text-align: center;
   margin: auto;
 }
+
 .label-float input {
   border: 1px solid lightgrey;
   border-radius: 40px;
@@ -74,6 +86,7 @@ svg {
   text-transform: none;
   -webkit-tap-highlight-color: transparent;
 }
+
 .label-float input:focus {
   border: 2px solid #3951b2;
 }
@@ -99,12 +112,13 @@ svg {
   0% {
     background-color: white;
   }
+
   100% {
     color: #282a36;
   }
 }
 
-.label-float input:required:invalid + label {
+.label-float input:required:invalid+label {
   color: #009425;
 }
 
@@ -112,12 +126,12 @@ svg {
   border: 2px solid #50fa7b;
 }
 
-.label-float input:required:invalid + label:before {
+.label-float input:required:invalid+label:before {
   content: "*";
 }
 
-.label-float input:focus + label,
-.label-float input:not(:placeholder-shown) + label {
+.label-float input:focus+label,
+.label-float input:not(:placeholder-shown)+label {
   font-size: 13px;
   top: 0;
   color: #3951b2;
@@ -128,6 +142,7 @@ svg {
   position: absolute;
   right: 0;
 }
+
 .Atributions a {
   color: white;
 }
